# dreamina-claude-skills

./: .env.example  .gitignore  CLAUDE.md  Dreamina_Skills_Test_Report.md  README.md  analyze_act1.sh  install-skills.sh  skills-completeness-summary.md
.claude/skills/: dreamina-api-config.md  dreamina-auth.md  dreamina-edit-image.md  dreamina-foreground-segmentation.md  dreamina-gen-image.md  dreamina-inspiration-search.md  dreamina-query-result.md  dreamina-super-resolution.md  dreamina-text-in-image.md  dreamina-upload-image.md  dreamina-video-first-end-frame.md  dreamina-video-first-frame.md  dreamina-video-multi-frame.md
commands/: bgm.md  compose.md  creative-think.md  tts.md  video-pipeline.md
music-analyzer/: README.md
music-analyzer/src/: pyproject.toml  setup.py
music-analyzer/src/music_analyzer/: __init__.py  __main__.py  cli.py  config.py  models.py
music-analyzer/src/music_analyzer/analyzers/: emotion.py  lyrics.py  onset.py  rhythm.py  timbre.py  tonality.py
music-analyzer/src/music_analyzer/formatters/: color_palette.py  dreamina_formatter.py  html_report.py  json_formatter.py  storyboard_formatter.py
music-analyzer/src/music_analyzer/utils/: audio_io.py  cache.py  visualization.py
self-purify/: CLAUDE.md  README.md
self-purify/.claude-plugin/: plugin.json
self-purify/hooks/: hooks.json
skill-references/: 01-content-research-writer.md  03-claudecode-writer-CLAUDE.md  08-fal-ai-generate.md  09-doc-coauthoring.md  10-vimax-architecture.md
video-tools/: config.py  requirements.txt
video-tools/compose/: compose.py
(+62 files in other folders)
