[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-analyzer"
version = "1.0.0"
description = "Audio analysis toolkit for Claude Code — extracts rhythm, emotion, timbre, tonality, lyrics and maps to Dreamina prompts"
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.23.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "soundfile>=0.12.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
standard = [
    "essentia>=2.1b6",
    "pyloudnorm>=0.1.0",
]
full = [
    "essentia>=2.1b6",
    "pyloudnorm>=0.1.0",
    "demucs>=4.0.0",
    "faster-whisper>=0.10.0",
    "laion-clap>=1.1.4",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.scripts]
music-analyzer = "music_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["music_analyzer*"]
